# dgc

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md
.github/workflows/: Release.yml  Test.yml
dgc/: Cargo.toml  cbindgen.toml
dgc-italy-core/: Cargo.toml  README.md
dgc-italy-core/src/: lib.rs  settings.rs
dgc-italy-core/tests/: lib.rs
dgc-italy-core/tests/data/: settings.json
dgc/examples/: parse.rs  validate-signature.rs
dgc/src/: capi.rs  dgc.rs  lib.rs  recovery.rs
dgc/tests/: lib.rs  sync_tests.sh
docs/: certificate_structure.drawio
examples/: expand-values.rs  parse.rs  trustlist-from-json.rs  validate-signature.rs
src/: cwt.rs  dgc.rs  dgc_cert.rs  dgc_container.rs  error.rs  lib.rs  parse.rs  recovery.rs  test.rs  trustlist.rs  vaccination.rs  valuesets.rs
src/dgc/: dgc_cert.rs  dgc_container.rs  mod.rs  r.rs  recovery.rs  t.rs  test.rs  v.rs  vaccination.rs  valuesets.rs
tests/: lib.rs
tests/data/: AE_1.json  AE_2.json  IT_1.json  IT_2.json  IT_3.json  IT_4.json
tests/data/ES/2DCode/raw/: 1501.json
