[package]
name = "dgc"
version = "0.0.1"
authors = ["Luciano Mammino"]
edition = "2018"
description = "A parse and validator for the Digital Green Certificate (dgc) aka greenpass"
keywords = ["dgc", "greenpass", "digital green certificate", "cose", "health"]
categories = ["encoding", "data-structures", "cryptography"]
repository = "https://github.com/lmammino/dgc"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base45 = "3.0.0"
base64 = "0.13.0"
der-parser = "6.0.0"
inflate = "0.4.5"
serde-transcode = "1.1.0"
ciborium = { git = "https://github.com/lmammino/ciborium", branch = "value-utils" }
ring-compat = "0.3.2"
x509-parser = "0.12.0"
thiserror = "1.0.30"
lazy_static = "1.4.0"
serde = "1.0.130"
serde_json = "1.0.64"

[dev-dependencies]
hex = "0.4.3"
rstest = "0.11.0"
