[package]
name = "dgc"
version = "0.0.1"
authors = ["Luciano Mammino"]
edition = "2018"
description = "A parser and validator for the EU Digital Green Certificate (dgc) a.k.a. greenpass"
keywords = ["dgc", "greenpass", "certificate", "cose", "health"]
categories = ["encoding", "data-structures", "cryptography"]
repository = "https://github.com/lmammino/dgc"
readme = "README.md"
license = "MIT"

[dependencies]
base45 = "3.0.0"
base64 = "0.13.0"
ciboriumvalue = "0.1.0" # TODO: this should be ciborium, once #25 gets merged
der-parser = "6.0.0"
inflate = "0.4.5"
lazy_static = "1.4.0"
ring-compat = "0.3.2"
serde = "1.0.130"
serde_json = "1.0.64"
thiserror = "1.0.30"
x509-parser = "0.12.0"

[dev-dependencies]
hex = "0.4.3"
rstest = "0.11.0"
